--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.18.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
+    "request": "^2.81.0",
     "sequelize": "^3.30.4"
   }
 }
