--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
+    "chart.js": "^2.5.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "hbs": "^4.0.1",
